@@ -1,3 +1,8 @@
+2012-04-02  Peter Bergner  <bergner@vnet.ibm.com>
+
+	* src/powerpc/ffi.c (ffi_prep_args_SYSV): Account for FP args pushed
+	on the stack.
+
 2013-02-08  Anthony Green <green@moxielogic.com>
 
 	* Makefile.am (EXTRA_DIST): Add missing files.
